--- a/task1/style.css
+++ b/task1/style.css
@@ -1,3 +1,158 @@
-h1{
-  color:red;
+*{
+  box-sizing: border-box;
+}
+
+.container{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider{
+  width: 100%;
+  max-width: 600px;
+  height: 100%;
+  max-height: 400px;
+  position: relative;
+  user-select: none;
+  touch-action: pan-y;
+}
+
+.slider__wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider__controls{
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.slider__arrow {
+  width: 10%;
+  height: 100%;
+  padding: 0;
+  background: transparent;
+  border: none;
+  transition: background .4s;
+  cursor: pointer;
+}
+
+.slider__arrow:hover {
+  background-color: rgba(41, 41, 41, 0.3);
+}
+
+.slider__arrow_icon {
+  display: block;
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  filter: invert(77%) sepia(58%) saturate(860%) hue-rotate(329deg) brightness(102%) contrast(98%);
+}
+
+.slider__icon-prev {
+  background-image: url(assets/svg/prevArrow.svg);
+}
+
+.slider__icon-next {
+  background-image: url(assets/svg/nextArrow.svg);
+}
+
+.slider__item{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: none;
+  margin: 0 auto;
+  animation: 0.5s ease-in-out;
+
+}
+
+.slider__item-active,
+.slider__item-next {
+  display: block;
+}
+
+.slider__item-next {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.slider__item_img{
+  width: 100%;
+}
+.slider:hover .slider__item_text{
+  opacity: 1;
+}
+
+.slider__item_text{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: antiquewhite;
+  font-size: 30px;
+  background: rgba(41, 41, 41, 0.5);
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+
+.arrow.right {
+  right: 50%;
+}
+
+.to-left {
+  animation-name: left;
+}
+
+.from-right {
+  animation-name: right;
+}
+
+.to-right {
+  animation-name: right;
+  animation-direction: reverse;
+}
+
+.from-left {
+  animation-name: left;
+  animation-direction: reverse;
+}
+
+@keyframes left {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes right {
+  from {
+    left: 100%;
+  }
+
+  to {
+    left: 0;
+  }
 }
