--- a/task3/style.css
+++ b/task3/style.css
@@ -1,3 +1,29 @@
 *{
   box-sizing: border-box;
 }
+
+h2{
+  text-align: center;
+}
+.video__container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.video__wrapper{
+  position: relative;
+  display: inline;
+}
+
+.video__time {
+  text-align: center;
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  width: 80px;
+  background-color: rgba(65, 65, 65, 0.5);
+  color: aliceblue;
+  font-weight: 600;
+}
