--- a/task6/style.css
+++ b/task6/style.css
@@ -1,3 +1,33 @@
 *{
   box-sizing: border-box;
 }
+
+.form{
+  padding: 20px;
+  margin: 20px auto;
+  width: 400px;
+  border: 1px solid black;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  background: rgb(244, 244, 244);
+}
+
+.form__input_wrapper{
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form__input {
+  width: 100%;
+  padding: 10px 5px;
+  border-radius: 10px;
+}
+
