--- a/task7/style.css
+++ b/task7/style.css
@@ -1,3 +1,18 @@
 *{
   box-sizing: border-box;
 }
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.square{
+  width: 50px;
+  min-width: 50px;
+  height: 50px;
+  min-height: 50px;
+}
